--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
             "jsdom": "^27.0.0",
             "rollup-plugin-visualizer": "^6.0.4",
             "terser": "^5.44.0",
-            "vite": "6.3.5",
+            "vite": "^6.3.6",
             "vite-plugin-compression": "^0.5.1",
             "vitest": "^3.2.4"
       },
